--- a/myCraft/src/app/common/booking-list/booking-list.component.html
+++ b/myCraft/src/app/common/booking-list/booking-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <div class="table-responsive mt-5">
+      <div>
         <table class="table table-striped table-hover">
           <thead>
             <tr>
