--- a/myCraft/src/app/app.component.html
+++ b/myCraft/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="content">
+
+  <app-sidenav></app-sidenav>
+
   <div class="container-fluid">
     <router-outlet></router-outlet>
   </div>
