--- a/myCraft/src/app/common/booking-list/booking-list.component.html
+++ b/myCraft/src/app/common/booking-list/booking-list.component.html
@@ -2,6 +2,10 @@
   <div class="row">
     <div class="col">
       <div>
+        <button [routerLink]="['/', 'edit-booking','0']"
+      class="btn btn-block h5 m-0 p-0">
+      Új foglalás <i class="material-icons">edit_calendar</i>
+    </button>
         <table class="table table-striped table-hover">
           <thead>
             <tr>
