--- a/myCraft/src/app/common/sidenav/sidenav.component.html
+++ b/myCraft/src/app/common/sidenav/sidenav.component.html
@@ -6,7 +6,7 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/booking" routerLinkActive="active"><i class="material-icons">view_list</i>Foglalások</a>
-      <a mat-list-item href="#">Link 2</a>
+      <a mat-list-item routerLink="/edit-booking/0"><i class="material-icons">edit_calendar</i>Új foglalás</a>
       <a mat-list-item href="#">Link 3</a>
     </mat-nav-list>
   </mat-sidenav>
