--- a/myCraft/src/app/common/booking-list/booking-list.component.html
+++ b/myCraft/src/app/common/booking-list/booking-list.component.html
@@ -9,12 +9,12 @@
         <table class="table table-striped table-hover">
           <thead>
             <tr>
-              <th>#</th>
-              <th>Name</th>
+              <th>Azonosító</th>
+              <th>Név</th>
               <th>Email</th>
-              <th>Package</th>
-              <th>Date</th>
-              <th>Time</th>
+              <th>Csomag</th>
+              <th>Dátum</th>
+              <th>Idősáv</th>
               <th></th>
             </tr>
           </thead>
@@ -24,10 +24,17 @@
                 <td>{{booking.name}}</td>
                 <td>{{booking.email}}</td>
                 <td>{{booking.package}}</td>
-                <td>{{booking.appointment.date}}</td>
+                <td>{{booking.appointment.date | date: 'yyyy/MM/dd' }}</td>
                 <td>{{booking.appointment.time}}</td>
-                <td><button (click)="onDelete(booking.id)" class="btn btn-danger btn-small"> <i class="fa fa-trash"></i> delete</button></td>
-            </tr>
+                <td>
+                  <div class="btn-group" role="group">
+                    <button [routerLink]="['/', 'edit-booking', booking.id]" class="btn btn-info">
+                      <i class="fa fa-eye"></i></button>
+                    <button (click)="onDelete(booking.id)" class="btn btn-danger btn-small">
+                      <i class="fa fa-trash"></i></button>
+                     </div>
+                 </td>
+             </tr>
           </tbody>
         </table>
       </div>
