--- a/myCraft/src/app/common/booking-list/booking-list.component.html
+++ b/myCraft/src/app/common/booking-list/booking-list.component.html
@@ -2,8 +2,7 @@
   <div class="row">
     <div class="col">
       <div>
-        <button [routerLink]="['/', 'edit-booking','0']"
-      class="btn btn-block h5 m-0 p-0">
+        <button [routerLink]="['/', 'edit-booking','0']" class="btn btn-block btn-light h5 my-3 p-0">
       Új foglalás <i class="material-icons">edit_calendar</i>
     </button>
         <table class="table table-striped table-hover">
