cards first version done

--- a/myCraft/src/app/common/sidenav/sidenav.component.scss
+++ b/myCraft/src/app/common/sidenav/sidenav.component.scss
@@ -15,3 +15,14 @@
   top: 0;
   z-index: 1;
 }
+
+.mat-toolbar .container {
+  height: 100%;
+
+}
+
+#birds {
+  width: auto;
+  height: 100%;
+  object-fit:cover;
+}
