--- a/myCraft/src/app/common/sidenav/sidenav.component.html
+++ b/myCraft/src/app/common/sidenav/sidenav.component.html
@@ -5,8 +5,10 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menü</mat-toolbar>
     <mat-nav-list>
+      <a mat-list-item routerLink="/dashboard"><i class="material-icons">dashboard</i>Főoldal</a>
       <a mat-list-item routerLink="/booking" routerLinkActive="active"><i class="material-icons">view_list</i>Foglalások</a>
       <a mat-list-item routerLink="/edit-booking/0"><i class="material-icons">edit_calendar</i>Új foglalás</a>
+      <a mat-list-item routerLink="/package"><i class="material-icons">inventory</i>Csomagok</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -20,6 +22,7 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>myCraft</span>
+      <div class="container"><img id="birds" src="../../../../assets/img/birds_crop.jpg" alt="birds"></div>
     </mat-toolbar>
     <!-- Add Content Here -->
   </mat-sidenav-content>
