minor appearance changes

--- a/myCraft/src/app/common/package-card/package-card.component.html
+++ b/myCraft/src/app/common/package-card/package-card.component.html
@@ -34,7 +34,7 @@
 
               </mat-expansion-panel> -->
 
-              <mat-expansion-panel hideToggle class="mat-elevation-z0">
+              <mat-expansion-panel class="mat-elevation-z0">
                 <mat-expansion-panel-header>
                   <mat-panel-title>
                     Csomag leírása
@@ -48,7 +48,7 @@
               </mat-expansion-panel>
 
 
-              <mat-expansion-panel  hideToggle class="mat-elevation-z0" (opened)="panelOpenState = true"
+              <mat-expansion-panel class="mat-elevation-z0" (opened)="panelOpenState = true"
               (closed)="panelOpenState = false">
                 <mat-expansion-panel-header>
                   <mat-panel-title>
