--- a/myCraft/src/app/common/sidenav/sidenav.component.html
+++ b/myCraft/src/app/common/sidenav/sidenav.component.html
@@ -10,6 +10,10 @@
       <a mat-list-item routerLink="/edit-booking/0"><i class="material-icons">edit_calendar</i>Új foglalás</a>
       <a mat-list-item routerLink="/package"><i class="material-icons">inventory</i>Csomagok</a>
     </mat-nav-list>
+
+    <img id="brushes" src="../../../../assets/img/brushes_arctic.jpg" alt="brushes">
+
+
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
@@ -23,6 +27,7 @@
       </button>
       <span>myCraft</span>
       <div class="container"><img id="birds" src="../../../../assets/img/birds_crop.jpg" alt="birds"></div>
+      <span>alkosd meg a saját világod...</span>
     </mat-toolbar>
     <!-- Add Content Here -->
   </mat-sidenav-content>
