--- a/myCraft/src/app/common/booking-list/booking-list.component.html
+++ b/myCraft/src/app/common/booking-list/booking-list.component.html
@@ -2,12 +2,12 @@
   <div class="row">
     <div class="col">
       <div>
-        <button [routerLink]="['/', 'edit-booking','0']" class="btn btn-block btn-light h5 my-3 p-0">
+        <button [routerLink]="['/', 'edit-booking','0']" class="btn btn-block h5 my-3 p-0 offset-1">
       Új foglalás <i class="material-icons">edit_calendar</i>
     </button>
-        <table class="table table-striped table-hover">
+        <table class="table table-striped table-hover offset-1">
           <thead>
-            <tr>
+            <tr class="table-primary">
               <th>Azonosító</th>
               <th>Név</th>
               <th>Email</th>
@@ -18,7 +18,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let booking of bookingList$ | async">
+            <tr *ngFor="let booking of bookingList$ | async" class="table-info">
                 <td>{{booking.id}}</td>
                 <td>{{booking.name}}</td>
                 <td>{{booking.email}}</td>
