--- a/myCraft/src/app/common/edit-booking/edit-booking.component.html
+++ b/myCraft/src/app/common/edit-booking/edit-booking.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="card">
-    <div class="card-header card-header-success">
+  <div class="card offset-2 mt-3">
+    <div class="card-header">
       <h4 class="card-title">Foglalás hozzáadása vagy módosítása</h4>
       <p class="card-category">A *-gal jelölt mezők kitöltése kötelező</p>
     </div>
