--- a/myCraft/src/app/common/sidenav/sidenav.component.scss
+++ b/myCraft/src/app/common/sidenav/sidenav.component.scss
@@ -4,6 +4,10 @@
 
 .sidenav {
   width: 200px;
+  background-color: rgb(208, 235, 250);
+  display: flex;
+  flex-direction: column;
+  align-content:center;
 }
 
 .sidenav .mat-toolbar {
@@ -25,4 +29,19 @@
   width: auto;
   height: 100%;
   object-fit:cover;
+}
+
+#brushes {
+  width: 100%;
+  height: auto;
+  object-fit:fill;
+}
+
+.mat-nav-list {
+  margin-bottom: 70%;
+}
+
+span {
+  font-family: 'Kaushan Script', cursive;
+  font-size:xx-large;
 }
