--- a/myCraft/src/app/common/package-card/package-card.component.scss
+++ b/myCraft/src/app/common/package-card/package-card.component.scss
@@ -10,3 +10,15 @@
   height: 40%;
  object-fit: fill;
 }
+
+.error-message {
+  font-size: smaller;
+}
+
+.mat-form-field textarea {
+  resize: both;
+  min-height: 30px;
+  min-width: 190px;
+  max-height: 50px;
+  max-width: 210px;
+}
