--- a/myCraft/src/styles.scss
+++ b/myCraft/src/styles.scss
@@ -3,3 +3,15 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: cornflowerblue;}
 
+.chartContainer canvas {
+  max-height: 250px;
+  width: auto;
+}
+
+.chartContainer{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
